# k8s-sentinel

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  generate-certs.sh  kind-config.yaml
config/: policies.yaml
dashboards/: grafana.json
deploy/argocd/: application.yaml  project.yaml
deploy/k8s/base/: cert-manager.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  poddisruptionbudget.yaml  service-metrics.yaml  service.yaml  serviceaccount.yaml  webhook-config.yaml
deploy/k8s/overlays/dev/: kustomization.yaml
deploy/k8s/overlays/prod/: kustomization.yaml
loadtest/: k6.js  run.sh  vegeta.sh
loadtest/payloads/: deployment_multi_container.json  pod_bad_image.json  pod_no_limits.json  valid_pod.json
src/: config.rs  engine.rs  handlers.rs  health.rs  main.rs  metrics.rs  tls.rs
src/policies/: image_registry.rs  labels.rs  mod.rs  resource_limits.rs  topology_spread.rs
