[package]
name = "k8s-sentinel"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json-patch = "4"
kube = { version = "3.0", features = ["runtime", "derive", "admission"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }
prometheus-client = "0.23"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "service"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
regex = "1"
clap = { version = "4.5", features = ["derive", "env"] }
figment = { version = "0.10", features = ["yaml", "env"] }
thiserror = "2"
